--- a/AndroidStudioProjects/My Application/ch6_view/build.gradle
+++ b/AndroidStudioProjects/My Application/ch6_view/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.myapplication"
+        applicationId "com.example.ch6_view"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -28,9 +28,6 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
-    }
-    buildFeatures {
-        viewBinding = true
     }
 }
 
