--- a/AndroidStudioProjects/My Application/ch8_event/build.gradle
+++ b/AndroidStudioProjects/My Application/ch8_event/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.app.test"
+        applicationId "com.example.ch8_event"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -29,9 +29,6 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    /*buildFeatures {
-        viewBinding = true
-    }*/
     viewBinding {
         enabled = true
     }
