--- a/AndroidStudioProjects/My Application/ch9_resource/build.gradle
+++ b/AndroidStudioProjects/My Application/ch9_resource/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.app.test"
+        applicationId "com.example.ch9_resource"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -28,12 +28,6 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
-    }
-    /*buildFeatures {
-        viewBinding = true
-    }*/
-    viewBinding {
-        enabled = true
     }
 }
 
