--- a/AndroidStudioProjects/My Application/settings.gradle
+++ b/AndroidStudioProjects/My Application/settings.gradle
@@ -17,3 +17,5 @@ include ':app'
 include ':ch6_view'
 include ':ch7_constraintlayout'
 include ':ch7_layout'
+include ':ch8_event'
+include ':ch9_resource'
