--- a/PracticeInClass/MyApplication10/settings.gradle
+++ b/PracticeInClass/MyApplication10/settings.gradle
@@ -14,3 +14,5 @@ dependencyResolutionManagement {
 }
 rootProject.name = "My Application10"
 include ':app'
+include ':app2'
+include ':ch10_notification'
