--- a/PracticeInClass/MyApplication10/app2/build.gradle
+++ b/PracticeInClass/MyApplication10/app2/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.myapplication10"
+        applicationId "com.example.app2"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -15,11 +15,9 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
     buildFeatures{
         viewBinding = true
     }
-
     buildTypes {
         release {
             minifyEnabled false
