--- a/PracticeInClass/MyApplication10/ch10_notification/build.gradle
+++ b/PracticeInClass/MyApplication10/ch10_notification/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.myapplication10"
+        applicationId "com.example.ch10_notification"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -16,10 +16,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    buildFeatures{
+    buildFeatures {
         viewBinding = true
     }
-
     buildTypes {
         release {
             minifyEnabled false
