--- a/PracticeInClass/MidExamPractice/settings.gradle
+++ b/PracticeInClass/MidExamPractice/settings.gradle
@@ -17,3 +17,5 @@ include ':app'
 include ':exam1'
 include ':myapplication1'
 include ':myapplication1_view'
+include ':myapplication7'
+include ':myapplication7_layout'
