--- a/PracticeInClass/MidExamPractice/settings.gradle
+++ b/PracticeInClass/MidExamPractice/settings.gradle
@@ -19,3 +19,5 @@ include ':myapplication1'
 include ':myapplication1_view'
 include ':myapplication7'
 include ':myapplication7_layout'
+include ':myapplication8'
+include ':myapplication8_event'
