--- a/PracticeInClass/MidExamPractice/settings.gradle
+++ b/PracticeInClass/MidExamPractice/settings.gradle
@@ -21,3 +21,4 @@ include ':myapplication7'
 include ':myapplication7_layout'
 include ':myapplication8'
 include ':myapplication8_event'
+include ':myapplication9'
