--- a/PracticeInClass/MidExamPractice/settings.gradle
+++ b/PracticeInClass/MidExamPractice/settings.gradle
@@ -22,3 +22,7 @@ include ':myapplication7_layout'
 include ':myapplication8'
 include ':myapplication8_event'
 include ':myapplication9'
+include ':myapplication10'
+include ':myapplication10_rington'
+include ':myapplication10_notification'
+include ':myapplication10_notify'
